--- a/PainelControle.html
+++ b/PainelControle.html
@@ -101,55 +101,52 @@
             const relatorioDiv = document.getElementById('relatorio');
             relatorioDiv.innerHTML = ''; // Limpa o conteúdo anterior
 
-            const dadosExemplo = [
-                { turma: '1º Ano', alunos: ['João', 'Maria', 'Pedro', 'Ana'] },
-                { turma: '2º Ano', alunos: ['Carlos', 'Mariana', 'Lucas', 'Julia'] },
-                { turma: '3º Ano', alunos: ['Fernanda', 'Roberto', 'Camila', 'Rafael'] },
-                { turma: '4º Ano', alunos: ['Eduardo', 'Larissa', 'Mateus', 'Sofia'] },
-                { turma: '5º Ano', alunos: ['Gustavo', 'Carolina', 'Gabriel', 'Isabela'] }
-            ];
+            fetch('http://localhost:8080/api/alunos')
+                .then(response => response.json())
+                .then(alunos => {
+                    alunos.forEach(aluno => {
+                        const turmaDiv = document.createElement('div');
+                        turmaDiv.classList.add('turma');
+                        turmaDiv.innerHTML = `<h3>Turma: ${aluno.turma.serie}</h3>`;
 
-            dadosExemplo.forEach(turma => {
-                const turmaDiv = document.createElement('div');
-                turmaDiv.classList.add('turma');
-                turmaDiv.innerHTML = `<h3>Turma: ${turma.turma}</h3>`;
+                        const table = document.createElement('table');
+                        const thead = document.createElement('thead');
+                        const tbody = document.createElement('tbody');
 
-                const table = document.createElement('table');
-                const thead = document.createElement('thead');
-                const tbody = document.createElement('tbody');
+                        const headerRow = document.createElement('tr');
+                        const th1 = document.createElement('th');
+                        th1.textContent = 'Aluno';
+                        const th2 = document.createElement('th');
+                        th2.textContent = 'Presença';
+                        headerRow.appendChild(th1);
+                        headerRow.appendChild(th2);
+                        thead.appendChild(headerRow);
 
-                const headerRow = document.createElement('tr');
-                const th1 = document.createElement('th');
-                th1.textContent = 'Aluno';
-                const th2 = document.createElement('th');
-                th2.textContent = 'Presença';
-                headerRow.appendChild(th1);
-                headerRow.appendChild(th2);
-                thead.appendChild(headerRow);
+                        const row = document.createElement('tr');
+                        const td1 = document.createElement('td');
+                        td1.textContent = aluno.nome;
+                        const td2 = document.createElement('td');
+                        td2.textContent = 'Presente'; // Por padrão, todos os alunos estão presentes
+                        td2.classList.add('presente'); // Por padrão, a presença é marcada como presente
+                        td2.addEventListener('click', () => togglePresenca(td2));
+                        const editIcon = document.createElement('span');
+                        editIcon.innerHTML = '&#9998;'; // Ícone de lápis
+                        editIcon.classList.add('edit-icon');
+                        td2.appendChild(editIcon);
 
-                turma.alunos.forEach(aluno => {
-                    const row = document.createElement('tr');
-                    const td1 = document.createElement('td');
-                    td1.textContent = aluno;
-                    const td2 = document.createElement('td');
-                    td2.textContent = 'Presente'; // Por padrão, todos os alunos estão presentes
-                    td2.classList.add('presente'); // Por padrão, a presença é marcada como presente
-                    td2.addEventListener('click', () => togglePresenca(td2));
-                    const editIcon = document.createElement('span');
-                    editIcon.innerHTML = '&#9998;'; // Ícone de lápis
-                    editIcon.classList.add('edit-icon');
-                    td2.appendChild(editIcon);
+                        row.appendChild(td1);
+                        row.appendChild(td2);
+                        tbody.appendChild(row);
 
-                    row.appendChild(td1);
-                    row.appendChild(td2);
-                    tbody.appendChild(row);
+                        table.appendChild(thead);
+                        table.appendChild(tbody);
+                        turmaDiv.appendChild(table);
+                        relatorioDiv.appendChild(turmaDiv);
+                    });
+                })
+                .catch(error => {
+                    console.error('Erro ao obter os dados dos alunos:', error);
                 });
-
-                table.appendChild(thead);
-                table.appendChild(tbody);
-                turmaDiv.appendChild(table);
-                relatorioDiv.appendChild(turmaDiv);
-            });
         }
 
         function togglePresenca(td) {
